--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": " babel src -d lib ",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
